# CalculixPP

./: .clang-format  .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  README.md  SECURITY.md  justfile
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
apps/: CMakeLists.txt
apps/cli/: main.cpp
cmake/: CalculixPPConfig.cmake.in  Dependencies.cmake
cmake/toolchains/: android.cmake  ios.cmake
examples/: README.md  femkit.py
examples/Antenna_1/: .gitignore  Antenna.mtl  README.md  antenna_stress.py
examples/table_stress/: .gitignore  README.md  extract_surface.py  fbx_table_stress.py  table_solid.stl  table_stress.py
include/calculixpp/compute/: backend.hpp
include/calculixpp/core/: amplitude.hpp  connector.hpp  constraint.hpp  constraint_cards.hpp  contact.hpp  element.hpp  material.hpp  mesh.hpp  model.hpp  node.hpp  results.hpp  section.hpp  solution_control.hpp  submodel.hpp  types.hpp
include/calculixpp/fem/: assembly.hpp  cavity_radiation.hpp  constraint_transform.hpp  contact.hpp  contact_search.hpp  element.hpp  extrapolation.hpp  loads.hpp  material_model.hpp  stress.hpp  thermal.hpp
include/calculixpp/geometry/: cad_mesher.hpp
include/calculixpp/io/: inp_parser.hpp  results_writer.hpp
include/calculixpp/numerics/: buckling.hpp  direct_dynamics.hpp  eigensolution.hpp  heat_transfer.hpp  high_cycle_fatigue.hpp  linear_static.hpp  modal_dynamics.hpp  multistep.hpp  nonlinear_static.hpp  sensitivity.hpp  submodel.hpp  substructure.hpp
openspec/: BACKLOG.md  project.md
openspec/changes/add-complex-modal-eigensolver/: README.md  tasks.md
openspec/changes/add-geometric-nonlinearity/: README.md  tasks.md
openspec/changes/add-high-cycle-fatigue/: proposal.md
openspec/changes/add-submodeling/: proposal.md  tasks.md
openspec/changes/archive/2026-07-02-phase-1-foundation/: README.md  design.md  tasks.md
openspec/changes/archive/2026-07-03-phase-2-nonlinear-statics-and-materials/: README.md  proposal.md  tasks.md
openspec/changes/archive/2026-07-03-phase-3-thermal-and-contact/: design.md  tasks.md
openspec/changes/archive/2026-07-04-add-complex-modal-eigensolver/: design.md  proposal.md
openspec/changes/archive/2026-07-04-add-design-optimization/: proposal.md  tasks.md
openspec/changes/archive/2026-07-04-add-geometric-nonlinearity/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-07-04-add-high-cycle-fatigue/: tasks.md
openspec/changes/archive/2026-07-04-add-submodeling/: tasks.md
openspec/changes/archive/2026-07-04-phase-4-dynamics-and-eigenproblems/: README.md
openspec/changes/phase-1-foundation/: proposal.md  tasks.md
openspec/changes/phase-2-nonlinear-statics-and-materials/: design.md  tasks.md
openspec/changes/phase-3-thermal-and-contact/: README.md  proposal.md  tasks.md
openspec/changes/phase-4-dynamics-and-eigenproblems/: design.md  proposal.md  tasks.md
openspec/changes/phase-5-advanced-physics/: README.md  design.md  proposal.md  tasks.md
openspec/specs/build-and-tooling/: spec.md
openspec/specs/cfd-and-network-analysis/: spec.md
openspec/specs/compute-backend/: spec.md
openspec/specs/constraints/: spec.md
openspec/specs/consumability/: spec.md
openspec/specs/contact/: spec.md
openspec/specs/contact-search/: spec.md
openspec/specs/crack-propagation/: spec.md
openspec/specs/design-optimization/: spec.md
openspec/specs/dynamic-analysis/: spec.md
openspec/specs/eigensolution/: spec.md
openspec/specs/electromagnetic-analysis/: spec.md
openspec/specs/element-sections/: spec.md
openspec/specs/geometric-stiffness/: spec.md
openspec/specs/heat-transfer-analysis/: spec.md
openspec/specs/high-cycle-fatigue/: spec.md
openspec/specs/input-deck-parsing/: spec.md
openspec/specs/linear-algebra-and-solvers/: spec.md
openspec/specs/loads-and-boundary-conditions/: spec.md
openspec/specs/material-models/: spec.md
openspec/specs/mesh-and-model/: spec.md
openspec/specs/mesh-processing/: spec.md
openspec/specs/mesh-refinement/: spec.md
openspec/specs/modal-and-buckling-analysis/: spec.md
openspec/specs/model-change/: spec.md
openspec/specs/nonlinear-solution-control/: spec.md
openspec/specs/python-bindings/: spec.md
openspec/specs/results-output/: spec.md
openspec/specs/static-analysis/: spec.md
openspec/specs/submodeling/: spec.md
openspec/specs/substructure-generation/: spec.md
python/: CMakeLists.txt  bindings.cpp
python/tests/: pytest.ini  test_regression.py
scripts/: bootstrap_deps.sh
src/: CMakeLists.txt
src/compute/: cpu_backend.cpp
src/core/: amplitude.cpp  constraints.cpp  element.cpp  mesh.cpp  model.cpp
src/fem/: assembly.cpp  cavity_radiation.cpp  constraint_transform.cpp  contact.cpp  contact_search.cpp  element.cpp  hyperelastic.cpp  loads.cpp  plasticity.cpp  stress.cpp  thermal.cpp  user_material.cpp
src/geometry/: cad_mesher.cpp
src/io/: inp_parser.cpp  results_writer.cpp
src/numerics/: buckling.cpp  direct_dynamics.cpp  eigensolution.cpp  heat_transfer.cpp  high_cycle_fatigue.cpp  linear_static.cpp  modal_dynamics.cpp  multistep.cpp  nonlinear_static.cpp  sensitivity.cpp  submodel.cpp  substructure.cpp
tests/: CMakeLists.txt  check.hpp  test_assembly.cpp  test_backend.cpp  test_buckling.cpp  test_cavity_radiation.cpp  test_complex_frequency.cpp  test_connector.cpp  test_constraints.cpp  test_contact.cpp  test_contact_search.cpp  test_direct_dynamics.cpp  test_eigen.cpp  test_element.cpp  test_geometry.cpp  test_hex.cpp  test_high_cycle_fatigue.cpp  test_loads.cpp  test_material_models.cpp  test_modal_dynamics.cpp  test_model_change.cpp  test_model_change_contact.cpp  test_multistep.cpp  test_nonlinear.cpp  test_parser.cpp  test_plasticity.cpp  test_pressure.cpp  test_results.cpp  test_sensitivity.cpp  test_solve.cpp  test_step_changes.cpp  test_submodel.cpp  test_substructure.cpp  test_thermal.cpp  test_thermal_contact.cpp  test_thermal_stress.cpp  test_thermal_transient.cpp
(+15 files in other folders)
